# nap-chan

./: .env.sample  .gitignore  Cargo.toml  README.md  config.json  generators.json.sample  install.md  sqlx-data.json
.github/workflows/: rust.yml
migrations/: 20220622123043_user_config.sql  20220622125002_dict.sql  20220622150904_user_config.sql  20220622192610_database.sql  20220701080432_database.sql  20220701082111_database.sql  20220710193232_database.sql  20220710195816_database.sql  20220726211035_database.sql  20220809063808_database.sql
src/: handler.rs  listener.rs  main.rs
src/commands/: channels.rs  definition.rs  dict.rs  interactions.rs  meta.rs  mod.rs  neko.rs  others.rs  user_config.rs  util.rs  voice.rs
src/lib/: db.rs  mod.rs  text.rs  voice.rs
