[package]
name = "nap-chan"
version = "0.1.0"
authors = ["Shift0117"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.5",default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
serde = "1.0.137"
serde_json = "1.0.81"
tokio = {version = "1.19.2",features = ["rt-multi-thread","macros","signal","sync"]}
songbird = {version = "0.3.0",features = ["driver","builtin-queue"]}
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
tracing-futures = "0.2.5"
reqwest = "0.11.10"
tempfile = "3.3.0"
dotenv = "0.15.0"
regex = "1.5.6"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
anyhow = "1.0.58"
rand = "0.8.5"
wana_kana = "2.1.0"
alkana-rs = "0.1.0"
poise = "0.3.0"
